# odb

./: .gitignore  INSTALL  INSTALL-GIT  LICENSE  Makefile.am  NEWS  README  bootstrap  buildfile  configure.ac  libodb-sqlite-vc12.sln  libodb-sqlite.pc.in  libodb.pc.in  makefile  manifest  packages.manifest  plugin.cxx  repositories.manifest  version  version.txt
doc/: .gitignore  Makefile.am  TODO  buildfile  doc.sh  makefile  manual.html2ps  manual.xhtml  odb-epilogue.1  odb-epilogue.xhtml  odb-prologue.1  odb-prologue.xhtml
doc/pregenerated/: odb.1  odb.xhtml
etc/sqlite/: README
libodb/: .gitignore  LICENSE  Makefile.am  README-GIT  configure.ac
libodb-sqlite/: Makefile.am  README-GIT  bootstrap  buildfile  configure.ac  libodb-sqlite.pc.in  makefile  manifest
libodb-sqlite/etc/sqlite/: sqlite3-vc12.vcxproj
libodb-sqlite/m4/: disable-rpath.m4  pkgconfig.m4
libodb-sqlite/odb/sqlite/: buildfile  libodb-sqlite-vc11.vcxproj  libodb-sqlite-vc11.vcxproj.filters  libodb-sqlite-vc8.vcproj  libodb-sqlite-vc9.vcproj  makefile
libodb/m4/: libodb.m4  libtool-link.m4  static-lib.m4  threads.m4
libodb/odb/: core.hxx  makefile  vector-impl.ixx  version-build2.hxx.in  version.hxx
libodb/odb/details/: condition.cxx  lock.cxx  mutex.cxx
libodb/odb/tr1/: lazy-pointer-traits.hxx  lazy-ptr.hxx  lazy-ptr.ixx  memory.hxx  pointer-traits.hxx
m4/: disable-rpath.m4  gcc-plugin.m4  libcutl.m4  libodb.m4  libsqlite.m4  libtool-link.m4  pkgconfig.m4  static-lib.m4  threads.m4
odb/: .gitignore  LICENSE  Makefile.am  bootstrap  buildfile  c-array-traits.hxx  cache-traits.hxx  callback.hxx  common-query.cxx  common-query.hxx  common.cxx  common.hxx  configure.ac  connection.cxx  connection.hxx  connection.ixx  connection.txx  container-traits.hxx  context.cxx  context.hxx  context.ixx  core.hxx  cxx-lexer.cxx  cxx-lexer.hxx  cxx-token.hxx  database.cxx  database.hxx  database.ixx  database.txx  diagnostics.cxx  diagnostics.hxx  emitter.cxx  emitter.hxx  error.cxx  error.hxx  exception.hxx  exceptions.cxx  exceptions.hxx  features.hxx  forward.hxx  (+132 more)
odb/compilers/vc/: pre.hxx
odb/details/: buffer.cxx  buffer.hxx  c-string.hxx  condition.cxx  condition.hxx  config-vc.h  config.h.in  config.hxx  exception.hxx  export.hxx  function-wrapper.hxx  function-wrapper.ixx  function-wrapper.txx  lock.cxx  lock.hxx  mutex.cxx  mutex.hxx  shared-ptr-fwd.hxx  shared-ptr.hxx  thread.cxx  thread.hxx  tls.hxx  transfer-ptr.hxx  type-info.hxx  unique-ptr.hxx  unused.hxx  wrapper-p.hxx
odb/details/build2/: config-stub.h  config-vc-stub.h  config-vc.h  config.h
odb/details/meta/: answer.hxx  class-p.hxx  polymorphic-p.hxx  remove-const-volatile.hxx  remove-const.hxx  remove-pointer.hxx  remove-volatile.hxx  static-assert.hxx
odb/details/posix/: condition.hxx  condition.ixx  exceptions.cxx  exceptions.hxx  (+8 more)
odb/doc/: .gitignore  buildfile  manual.xhtml  odb-epilogue.1  odb-prologue.1  odb-prologue.xhtml
odb/m4/: disable-rpath.m4  gcc-plugin.m4
odb/mysql/: common.cxx  common.hxx  context.cxx  context.hxx  header.cxx  header.hxx  inline.cxx  inline.hxx  schema.cxx  schema.hxx  source.cxx  source.hxx  sql-schema.cxx  sql-schema.hxx
odb/odb/: .gitignore  Makefile.am  common-query.cxx  common-query.hxx  common.cxx  context.hxx  cxx-lexer.cxx  diagnostics.cxx  diagnostics.hxx  emitter.hxx  features.hxx  gcc.hxx  generate.hxx  header.cxx  inline.cxx  instance.cxx  location.cxx  location.hxx  makefile  option-functions.cxx  option-parsers.hxx  option-types.cxx  option-types.hxx  plugin.cxx  processor.hxx  semantics.hxx  sql-lexer.cxx  sql-token.cxx  sql-token.ixx  traversal.hxx  version.hxx
odb/relational/: changelog.cxx  common-query.cxx  common-query.hxx  common.cxx  common.hxx  common.txx  context.cxx  context.hxx  context.ixx  generate.hxx  header.cxx  header.hxx  inline.cxx  inline.hxx  model.cxx  model.hxx  processor.cxx  processor.hxx  schema-source.cxx  schema-source.hxx  schema.cxx  schema.hxx  source.cxx  source.hxx  type-processor.cxx  type-processor.hxx  validator.cxx  validator.hxx
odb/semantics/: class-template.cxx  class-template.hxx  class.cxx  class.hxx  derived.cxx  derived.hxx  elements.cxx  elements.hxx  elements.ixx  enum.cxx  enum.hxx  fundamental.cxx  fundamental.hxx  namespace.cxx  namespace.hxx  relational.hxx  template.cxx  template.hxx  union-template.cxx  union-template.hxx  union.cxx  union.hxx  unit.cxx  unit.hxx
odb/sqlite/: Makefile.am  auto-handle.hxx  binding.hxx  blob-stream.cxx  blob-stream.hxx  blob.hxx  buildfile  connection-factory.cxx  connection-factory.hxx  connection.cxx  connection.hxx  connection.ixx  container-statements.hxx  container-statements.txx  database.cxx  database.hxx  database.ixx  error.cxx  error.hxx  exceptions.cxx  exceptions.hxx  forward.hxx  libodb-sqlite-vc10.vcxproj  libodb-sqlite-vc11.vcxproj  libodb-sqlite-vc12.vcxproj  libodb-sqlite-vc8.vcproj  libodb-sqlite-vc9.vcproj  makefile  no-id-object-result.hxx  no-id-object-result.txx  no-id-object-statements.hxx  no-id-object-statements.txx  object-result.hxx  object-result.txx  object-statements.cxx  object-statements.hxx  object-statements.ixx  object-statements.txx  polymorphic-object-result.hxx  polymorphic-object-result.txx  (+55 more)
odb/sqlite/details/: config-vc.h  config.h.in  config.hxx  conversion.hxx  export.hxx  options.cli
odb/sqlite/details/build2/: config-stub.h  config-vc-stub.h  config-vc.h  config.h
odb/sqlite/details/pregenerated/odb/sqlite/details/: options.cxx
odb/tests/: buildfile
odb/tr1/: lazy-pointer-traits.hxx  lazy-ptr.hxx  lazy-ptr.ixx  lazy-ptr.txx  memory.hxx  pointer-traits.hxx  wrapper-traits.hxx
odb/tracer/: generate.hxx  header.cxx  header.hxx  inline.cxx  inline.hxx  source.cxx  source.hxx
odb/traversal/: class-template.cxx  class-template.hxx  class.cxx  class.hxx  derived.cxx  derived.hxx  elements.cxx  elements.hxx  enum.cxx  enum.hxx  fundamental.hxx  namespace.hxx  relational.hxx  template.cxx  template.hxx  union-template.cxx  union-template.hxx  union.hxx  unit.hxx
tests/: buildfile  testscript
tests/basics/: buildfile  driver.cxx
(+232 files in other folders)
