# file      : doc/Makefile.am
# author    : Boris Kolpackov <boris@codesynthesis.com>
# copyright : Copyright (c) 2009-2010 Code Synthesis Tools CC
# license   : GNU GPL v3; see accompanying LICENSE file

dist_doc_DATA = __file__(docs)
dist_man_MANS = __file__(mans)
EXTRA_DIST = __file__(extra_dist)
